--- a/index.html
+++ b/index.html
@@ -50,31 +50,31 @@
 <section>
     <h2>What are we doing</h2>
     <ul>
-        <li><img src="./images/laptop.jpg" alt="laptop"></li>
-        <li><img src="./images/smartphone.jpg" alt="smartphone"></li>
-        <li><img src="./images/hand-smartphone.jpg" alt="hand with smartphone"></li>
+        <li><img src="./images/laptop.jpg" alt="laptop" width="360" height="300"></li>
+        <li><img src="./images/smartphone.jpg" alt="smartphone" width="360" height="300"></li>
+        <li><img src="./images/hand-smartphone.jpg" alt="hand with smartphone" width="360" height="300"></li>
     </ul>
 </section>
 <section>
     <h2>Our Team</h2>
     <ul>
         <li>
-            <img src="./images/team1.jpg" alt="photo by mark guerrero">
+            <img src="./images/team1.jpg" alt="photo by mark guerrero" width="264" height="260">
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
         </li>
         <li>
-            <img src="./images/team2.jpg" alt="photo by tom ford">
+            <img src="./images/team2.jpg" alt="photo by tom ford" width="264" height="260">
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
         </li>
         <li>
-            <img src="./images/team3.jpg" alt="photo by camila garcia">
+            <img src="./images/team3.jpg" alt="photo by camila garcia" width="264" height="260">
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
         </li>
         <li>
-            <img src="./images/team4.jpg" alt="photo by daniel wilson">
+            <img src="./images/team4.jpg" alt="photo by daniel wilson" width="264" height="260">
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
         </li>
