--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <header>
+        <nav>
 <a href="./index.html">WebStudio</a>
+        </nav>
 <nav>
     <ul>
       <li><a href="">Studio</a></li>
@@ -29,6 +31,7 @@
     <button type="button">Order Service</button>
 </section>
 <section>
+    <h2>Section 2</h2>
    <ul>
     <li>
         <h3>Strategy</h3>
